packages/jsts/tests/dbd/benchmark/SyntaxError/S02 Unexpected token/S02-01/reproducer.js

if (5 < 3)
  alert('It is true.')
  alert('Hello')
else // Noncompliant
  alert('It is false.')
